--- a/arte-griego/index.html
+++ b/arte-griego/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/estilo.css">
+    <script src="./codigo/index.js"></script>
     <title>ANDREW</title>
 </head>
 <body>
