--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <h1 id="titulo">lista de mi paginas web</h1>
             <ul id="lista">
                 <li class="lista__li"><a href="./arte-griego/index.html" class="lista__a">arte griego</a></li>
+                <li class="lista__li"><a href="./planos-y-angulos/index.html" class="lista__a">planos y angulos</a></li>
             </ul>
         </nav>
     </header>
