--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
             <ul id="lista">
                 <li class="lista__li"><a href="./arte-griego/index.html" class="lista__a">arte griego</a></li>
                 <li class="lista__li"><a href="./planos-y-angulos/index.html" class="lista__a">planos y angulos</a></li>
+                <li class="lista__li"><a href="./estudioDeCaso/index.html" class="lista__a">estudio de caso</a></li>
+
             </ul>
         </nav>
     </header>
