--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
                 <li class="lista__li"><a href="./planos-y-angulos/index.html" class="lista__a">planos y angulos</a></li>
                 <li class="lista__li"><a href="./estudioDeCaso/index.html" class="lista__a">estudio de caso</a></li>
                 <li class="lista__li"><a href="./inmobiliaria/index.html" class="lista__a">inmobiliaria</a></li>
-                <li class="lista__li"><a href="./analisisDeJuanBosch/index.html" class="lista__a">Análisis de Juan Bosch</a></li>
+                <li class="lista__li"><a href="./analisisDeJuanBosch/index.html" class="lista__a">análisis de Juan Bosch</a></li>
+                <li class="lista__li"><a href="./malTiempoDeJuanBosch/index.html" class="lista__a">mal tiempo de Juan Bosch</a></li>
+
 
             </ul>
         </nav>
